# openpandora

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: openpandora.yml  release.yml
scripts/: build_release.py
src/: __main__.py
src/openpandora/: __init__.py  checks.py  cli.py  command_runner.py  file_context.py  findings.py  git_changes.py  git_context.py  github_auth.py  github_pull_requests.py  history.py  hooks.py  improve.py  learned_rules.py  openai_account.py  patches.py  project_config.py  project_init.py  provider_clients.py  providers.py  pull_requests.py  review.py  setup_wizard.py
tests/: conftest.py  test___main__.py  test_checks.py  test_cli.py  test_command_runner.py  test_file_context.py  test_findings.py  test_git_changes.py  test_git_context.py  test_github_auth.py  test_github_pull_requests.py  test_history.py  test_hooks.py  test_improve.py  test_install_script.py  test_learned_rules.py  test_openai_account.py  test_openpandora.py  test_openpandora_workflow.py  test_patches.py  test_project_config.py  test_project_init.py  test_provider_clients.py  test_providers.py  test_pull_requests.py  test_release_build.py  test_release_workflow.py  test_review.py  test_setup_wizard.py
